# apiforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  SECURITY.md  progress.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apiforge/: __init__.py  cli.py  client.py  config.py  exceptions.py  executor.py  resource.py  response.py
apiforge-configs/yandex/: README.md  direct.json  metrika.json
apiforge/adapters/: __init__.py  base.py  http.py  requests_adapter.py
apiforge/config/: __init__.py  discovery.py  loader.py  validator.py
apiforge/core/: __init__.py  client.py  executor.py  resource.py  response.py
apiforge/serializers/: __init__.py  base.py  json.py
configs/_template/: api_template.json
docs/: architecture.md  config-creation.md  config-generation.md  configuration.md  examples.md  faq.md  runbook.md
docs/adr/: 001-config-driven-architecture.md  002-adapter-pattern.md  003-retry-strategy.md  004-exception-hierarchy.md  005-json-schema-validation.md  006-serialization-layer.md  007-mcp-integration.md  008-access-control.md
docs/compose/reports/: apiforge-improvements.md
examples/: yandex_direct_reports.py  yandex_metrika.py
examples/configs/yandex/: README.md
tests/: test_adapter.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_serializers.py  test_yandex_admetrica.py  test_yandex_audience.py  test_yandex_direct.py  test_yandex_metrika.py  test_yandex_webmaster.py
